# ms_rocket

./: .gitignore  LICENSE.md  README.md  requirements.txt  setup.cfg
ms_rocket/: example_msrocket.py
src/: ms_rocket.py  test_msrocket.py
