[metadata]
name = msROCKET_otoolej
version = 0.1.0
author = John M. O`Toole
author_email = jotoole@ucc.ie
description = Multi-scale ROCKET: a random convolutional kernel transform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/otoolej/ms_rocket
project_urls =
    Bug Tracker = https://github.com/otoolej/ms_rocket/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Machine Learning
    Intended Audience ::  Machine Learning Research
license = License :: OSI Approved :: BSD License    

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    numba


